--- a/app/src/main/res/layout/activity_search_history.xml
+++ b/app/src/main/res/layout/activity_search_history.xml
@@ -18,6 +18,14 @@
         android:layout_marginTop="20sp"
         />
 
+    <Button
+        android:id="@+id/btnClearHistory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Clear Search History"
+        android:layout_margin="16dp"/>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_recipe"
         android:layout_width="match_parent"
