--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,8 +7,7 @@
     tools:context=".SettingsActivity"
     android:padding="@dimen/main_content_padding"
     android:orientation="vertical"
-    android:background="@color/main_screen_content_background"
-    >
+    android:background="@color/main_screen_content_background">
 
     <TextView
         android:layout_width="match_parent"
@@ -17,30 +16,6 @@
         android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:text="Desired daily calorie intake"
-                />
-
-            <EditText
-                android:id="@+id/et_cal_input"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                />
-
-        </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,9 +35,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            />
-
+            android:inputType="number"/>
     </LinearLayout>
 
     <LinearLayout
@@ -84,7 +57,6 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="Diet type..."/>
-
     </LinearLayout>
 
     <LinearLayout
@@ -106,7 +78,6 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="Meal Priority..."/>
-
     </LinearLayout>
 
     <Button
@@ -115,6 +86,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save"/>
-
-
 </LinearLayout>
