--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="main_screen_content_background">#EFEFEF</color>
-    <color name="toolbar_color_control_name">#000000</color>
-    <color name="rv_background">#9C9C9C</color>
-    <color name="red">#E53935</color>
+    <!-- Existing colors from your project -->
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="main_screen_content_background">#FFFFFF</color>
+    <color name="text_color_primary">#000000</color>
+    <color name="text_color_hint">#757575</color>
+
+    <!-- Missing colors from error -->
+    <color name="purple_500">#6200EE</color> <!-- Material Design Purple 500 -->
+    <color name="purple_700">#3700B3</color> <!-- Material Design Purple 700 -->
+    <color name="white">#FFFFFF</color>
+    <color name="teal_200">#03DAC5</color> <!-- Material Design Teal 200 -->
+    <color name="teal_700">#018786</color> <!-- Material Design Teal 700 -->
+    <color name="black">#000000</color>
 </resources>
