--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,29 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:padding="@dimen/main_content_padding"
-    android:background="@color/main_screen_content_background"
-    >
+    android:background="@color/main_screen_content_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        >
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/btn_favorites"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginEnd="5dp"
+            android:text="Favorites" />
 
         <Button
             android:id="@+id/btn_search_history"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginEnd="5dp"
-            android:text="@string/search_history"
-            />
+            android:layout_marginHorizontal="5dp"
+            android:text="@string/search_history" />
 
         <Button
             android:id="@+id/btn_settings"
@@ -32,8 +37,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_marginStart="5dp"
-            android:text="@string/settings"
-            />
+            android:text="@string/settings" />
 
     </LinearLayout>
 
@@ -49,15 +53,16 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:layout_marginEnd="10dp"
-            />
+            android:textColor="@color/text_color_primary"
+            android:textColorHint="@color/text_color_hint"
+            android:backgroundTint="@color/text_color_primary" />
 
         <Button
             android:id="@+id/btn_search"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/search"
-            />
+            android:text="@string/search" />
 
     </LinearLayout>
 
@@ -66,8 +71,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/recipe_item"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        />
-
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
