--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -63,6 +63,15 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:tint="@color/text_color_primary" />
 
+        <ImageButton
+            android:id="@+id/ib_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_share"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:tint="@color/text_color_primary"
+            android:contentDescription="Share recipe" />
+
         <Button
             android:id="@+id/btn_select_recipe"
             android:layout_width="wrap_content"
