--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,4 +6,5 @@
     <color name="text_color_primary">#E0E0E0</color>
     <!-- Hint color for EditText in dark mode -->
     <color name="text_color_hint">#B0B0B0</color>
+    <color name="colorAccent">#6200EE</color>
 </resources>
